--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# VIM swap files
+*.swp
+
 # built application files
 *.apk
 *.ap_
@@ -15,6 +18,7 @@ gen/
 # Local configuration file (sdk path, etc)
 local.properties
 .settings
+.metadata
 
 # Eclipse project files
 #.classpath
