--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,19 +9,24 @@
         android:targetSdkVersion="17" />
 
     <application
-        android:name="StackOverflow"
+        android:name="se.chalmers.eda397.team7.so.StackOverflow"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name="se.chalmers.eda397.team7.so.activities.LoginActivity"
             android:label="@string/title_activity_login"
             android:windowSoftInputMode="adjustResize|stateVisible" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="se.chalmers.eda397.team7.so.activities.QuestionsActivity"
+            android:label="@string/title_activity_questions" >
         </activity>
     </application>
 
