--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,11 +31,14 @@
         <activity
             android:name="se.chalmers.eda397.team7.so.UserActivity"
             android:label="@string/title_activity_user" >
-
         </activity>
         <activity
             android:name="se.chalmers.eda397.team7.so.UserListActivity"
             android:label="@string/title_activity_user_list" >
+        </activity>
+        <activity
+            android:name="se.chalmers.eda397.team7.so.activities.HomeActivity"
+            android:label="@string/title_activity_home" >
         </activity>
     </application>
 
