--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    
+    <instrumentation android:name=".test.data.DataInstrumentalizationRunner" android:targetPackage="se.chalmers.eda397.team7.so" android:label="data_tests"></instrumentation>
 
     <application
         android:name="se.chalmers.eda397.team7.so.StackOverflow"
@@ -14,6 +16,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="android.test.runner" />
         <activity
             android:name="se.chalmers.eda397.team7.so.activities.LoginActivity"
             android:label="@string/title_activity_login"
