--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,12 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
-    
-    <instrumentation android:name=".test.data.DataInstrumentalizationRunner" android:targetPackage="se.chalmers.eda397.team7.so" android:label="data_tests"></instrumentation>
+
+    <instrumentation
+        android:name="se.chalmers.eda397.team7.so.test.data.DataInstrumentalizationRunner"
+        android:label="data_tests"
+        android:targetPackage="se.chalmers.eda397.team7.so" >
+    </instrumentation>
 
     <application
         android:name="se.chalmers.eda397.team7.so.StackOverflow"
@@ -17,6 +21,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <uses-library android:name="android.test.runner" />
+
         <activity
             android:name="se.chalmers.eda397.team7.so.activities.LoginActivity"
             android:label="@string/title_activity_login"
@@ -43,9 +48,13 @@
             android:name="se.chalmers.eda397.team7.so.activities.HomeActivity"
             android:label="@string/title_activity_home" >
         </activity>
-                <activity
+        <activity
             android:name="se.chalmers.eda397.team7.so.activities.QuestionInformation"
             android:label="@string/title_activity_question_information" >
+        </activity>
+        <activity
+            android:name="se.chalmers.eda397.team7.so.SearchActivity"
+            android:label="@string/title_activity_search" >
         </activity>
     </application>
 
