--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -67,10 +67,22 @@
         <activity
             android:name="se.chalmers.eda397.team7.so.activities.Questions_Tab_Activity"
             android:label="@string/title_activity_search" >
-		</activity>
-		<activity
+        </activity>
+        <activity
             android:name="se.chalmers.eda397.team7.so.activities.TagCloudActivity"
             android:label="@string/title_activity_search" >
+        </activity>
+        <activity
+            android:name="se.chalmers.eda397.team7.so.activities.QuestionItemTab"
+            android:label="@string/title_activity_question_item_tab" >
+        </activity>
+        <activity
+            android:name="se.chalmers.eda397.team7.so.activities.AnswersActivity"
+            android:label="@string/title_activity_answers" >
+        </activity>
+        <activity
+            android:name="se.chalmers.eda397.team7.so.activities.CommentsActivity"
+            android:label="@string/title_activity_comments" >
         </activity>
     </application>
 
